--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             <nav id="nav3">
                 <ul>
                     <li><a href="#"><img src="./images/facebook-f-logo-white-background-21.jpg" width = "25" height = "25" target = "blank"></a></li>
-                    <li><a href="#"><img src="C:\Users\manjit\coding\javascriptjune2018\javascriptLibrary\0-prework\4-assets\instaa.jpg" width = "25px" height = "25px"></a></li>
-                    <li><a href="#"><img src="C:\Users\manjit\coding\javascriptjune2018\javascriptLibrary\0-prework\4-assets\twitter.png" height="25px" width="25px"></a></li>
+                    <li><a href="#"><img src="./images/instagram.jpg" width = "25px" height = "25px"></a></li>
+                    <li><a href="#"><img src="./images/twitter.png" height="25px" width="25px"></a></li>
                     <li><a href="#"><img src="./images/login.png" width="25px" height="25px">login</a></li>
                     <li><a href="#"><img src ="./images/cart.png" width="25px" height="25px">My Cart</a></li>
                 </ul>
