--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Store Front</title>
-       <link rel="stylesheet" type="text/css" href="storeinfront.css">
+       <link rel="stylesheet" type="text/css" href="storeInfront.css">
     </head>
     <body>
          <header>
