--- a/index.html
+++ b/index.html
@@ -8,17 +8,27 @@
             <!-- //login menu -->
             <nav id="nav3">
                 <ul>
-                    <li><a href="#"><img src="./images/facebook-f-logo-white-background-21.jpg" width = "25" height = "25" target = "blank"></a></li>
-                    <li><a href="#"><img src="./images/instagram.jpg" width = "25px" height = "25px"></a></li>
-                    <li><a href="#"><img src="./images/twitter.png" height="25px" width="25px"></a></li>
-                    <li><a href="#"><img src="./images/login.png" width="25px" height="25px">login</a></li>
-                    <li><a href="#"><img src ="./images/cart.png" width="25px" height="25px">My Cart</a></li>
+                    <li>
+                        <a href="#"><img src="./images/facebook-f-logo-white-background-21.jpg" width = "30" height = "30" target = "blank"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/instagram.jpg" width = "30px" height = "30px"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/twitter.png" height="30px" width="30px"></a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="./images/login.png" width="30px" height="30px">login</a>
+                    </li>
+                    <li>
+                        <a href="#"><img src ="./images/cart.png" width="30px" height="30px">My Cart</a>
+                    </li>
                 </ul>
             </nav>
             <br />
              <!-- //navigation menu -->
              <h1> Jewel's Jewelry 
-             <input type="search"  placeholder="Search Jewelry....">
+                <input type="search"  placeholder="Search Jewelry....">
              </h1>
              <br />
              <br />
@@ -31,39 +41,38 @@
                     <li><a href="#">WEDDING SPECIAL</a></li>
                     <li><a href="#">GEMSTONES</a></li>
                     <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">FEEDBACK</a></li>
-                    
+                    <li><a href="#">FEEDBACK</a></li>  
                 </ul>
             </nav>
         </header>
         <br />
         <br />
-    <section >
-        <div class="background">
-            <img src="./images/background.jpg" id="main">   
-            <div class= "sidebar">
-                        <!-- //sidebar text -->
+        <section >
+            <div class="background">
+                <img src="./images/background.jpg" id="main">   
+                <div class= "sidebar">
+                 <!-- //sidebar text -->
                 <!-- <h1>About Us</h1> -->
                 <p id="loremTest">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet venenatis urna cursus eget nunc scelerisque viverra mauris. Vestibulum lectus mauris ultrices eros. Venenatis lectus magna fringilla urna porttitor. Scelerisque in dictum non consectetur a. Ipsum dolor sit amet consectetur adipiscing elit. Lorem mollis aliquam ut porttitor leo a diam. Id venenatis a condimentum vitae sapien pellentesque habitant. Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Proin sagittis nisl rhoncus mattis. Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-            </div>
-        </div>        
-    </section>
-    <br />
-    <br />
-    <br />
-    <br />
-    <section>
-            <h1>Latest Designs:</h1>       
+                </div>
+            </div>        
+        </section>
+        <br />
+        <br />
+        <br />
+        <br />
+        <section>
+            <h1>&#9734Latest Designs&#9734</h1>       
             <br />
             <br />
             <!-- //main section  -->
             <!-- //  types of jewelry -->
             <div class="rings">
-                <img src="./images/jewbl.jpg" class="ring"  >
-               <h2>Almaz' Diamong Ring</h2>
-               <h3>$199.99</h3>
-               <button><a href="#">Order Now</a></button>
-               <br />
+                <img src="./images/jewbl.jpg" class="ring">
+                <h2>Almaz' Diamong Ring</h2>
+                <h3>$199.99</h3>
+                <button><a href="#">Order Now</a></button>
+                <br />
             </div>
             <div class="rings">
                 <img src="./images/bang.jpg" class="ring">
@@ -107,26 +116,26 @@
                 <h2>Lashita Mudhra Gold Necklace </h2>
                 <h3>$4,999.99</h3>
                 <button>Order Now</button>
-                <br />
-                </div>
-            <div class="rings"><img src="./images/pearl2.jpg" class="ring">
+            <br />
+            </div>
+            <div class="rings"><img src="./images/pearl2.jpg"class="ring">
                 <h2>Visola Nivara Pearl Necklace  </h2>
                 <h3>$2,999.99</h3> 
                 <button><a href="#">Order Now</a></button> 
-                <br />
+            <br />
             </div>
             <div class="rings"><img src="./images/crown.jpg" class="ring">
                 <h2>Shasa Nivara Diamon Crown </h2>
                 <h3>$7,999.99</h3>
                 <button><a href="#">Order Now</a></button>
-                <br />
+            <br />
             </div>
         </section>
         <br />
         <footer>
             <!-- //legal items, navigational items. -->
-            <span> @ copy 2017</span>
             <ul id="footer"> 
+                <span>&copy copy 2017</span>
                 <li><a href="#">Sitemap</a></li>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Use</a></li>
